...
  }, [uploadedPhotoUrls, mergeIncomingAttachments]);

  if (!user) return null;

  return (
    <SafeAreaView
      testID="create-task__root"
      edges={['left', 'right']}
      className="flex-1 bg-[#E7F4F8]"
    >
      <StatusBar style="light" />

      <View testID="create-task__header">
...
